legacy/django/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kidsfun-django-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m" # Para permitir subida de archivos media grandes
spec:
  tls:
    - hosts:
        - kidsfunyfiestasinfantiles.com
        - www.kidsfunyfiestasinfantiles.com
      secretName: kidsfun-django-tls
  rules:
    - host: kidsfunyfiestasinfantiles.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kidsfun-django-service
                port:
                  number: 80
    - host: www.kidsfunyfiestasinfantiles.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kidsfun-django-service
                port:
                  number: 80
